site started - still to resolve math

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-100">
 <head>
-    <title>App Name: A coding project</title>
+    <title>Mortgage Manager</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
 <!-- nav section -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/Img/favicon.png" width="30" height="30" class="d-inline-block align-text-top"> APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="/Img/favicon.png" width="30" height="30" class="d-inline-block align-text-top"> Mortgage Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="/code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/luke-las/LoanSchedule">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="#">About</a>
@@ -51,7 +51,7 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row row-cols-1 row-cols-lg-2 g-5 py-5">
                <div class="col order-last order-lg-first">
-                   <h1 class="display-5 fw-bold 1h-1 mb-3">Hundred: A Coding Project</h1>
+                   <h1 class="display-5 fw-bold 1h-1 mb-3">Mortgage Manager Project</h1>
                    <h4 class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. At, possimus delectus quisquam tempora sint, repudiandae saepe provident alias animi eos assumenda voluptates eveniet vitae minus corporis nulla nobis ea? Voluptates!</h4>
                    <ul class="fa-ul pt-2 checklist">
                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -63,7 +63,7 @@
                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript If/Then/Else Statements</li>
                    </ul>
                    <div>
-                       <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try it out!</a>
+                       <a type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2" href="app.html">Try it out!</a>
                    </div>
                    <h5 class="fw-bold mt-5">
                        <div class="d-flex">
@@ -77,7 +77,7 @@
                    </h5>
                </div>
                <div class="col align-self-center">
-                   <img src="IMG/Hundred.png" class="img-fluid center-block d-block mx-auto" alt="App logo" width="1000" height="100">
+                   <img src="/img/Amortization applied.png" class="img-fluid center-block d-block mx-auto" alt="App logo" width="1000" height="100">
                </div>
            </div>
        </div>
