--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-100">
 <head>
-    <title>App Name: A coding project</title>
+    <title>Mortgage Manager</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
 <!-- nav section -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/Img/favicon.png" width="30" height="30" class="d-inline-block align-text-top"> APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="/Img/favicon.png" width="30" height="30" class="d-inline-block align-text-top"> Mortgage Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="/code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/luke-las/LoanSchedule">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="#">About</a>
@@ -49,40 +49,79 @@
 <!-- main section -->
 <main class="flex-shrink-0">
     <div class="container mt-4">
-        <div class="row row-cols-1 row-cols-lg-2">
-            <div class="col col-lg-5 border-end border-2">
-                <h1>The Hundred</h1>
-                <h4 class="lead">The first goal of "The Hundred" is to generate a list of values starting at the first input, and ending at the second input. The secondary objective is to display even values bolded.</h4>
-                <h2 class="mt-5 border-bottom border-2">Instructions</h2>
-                <p>Enter a starting value and an ending value, and then press the button.</p>
+        <div class="row">
+            <div class="col-4 border bg-light">
+                <form>
+                    <div class="form-group row gy-3 mt-4">
+                        <h4 for="loanBalance" class="col-sm-4 col-form-label">Loan Balance</h4>
+                        <div class="col-sm-8">
+                            <input type="number" class="form-control" id="loanBalance" value="25000">
+                        </div>
+
+                        <h4 for="loanTerm" class="col-sm-4 col-form-label">Loan Term</h4>
+                        <div class="col-sm-8">
+                            <input type="number" class="form-control" id="loanTerm" value="60">
+                        </div>
+
+                        <h4 for="interestRate" class="col-sm-4 col-form-label">Interest Rate</h4>
+                        <div class="col-sm-8">
+                            <input type="number" class="form-control" id="loanInterest" value="5">
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row-reverse mt-4 mb-4">
+                        <button type="button" id="btnSubmit" class="btn btn-primary">Calculate</button>
+                    </div>                
+                </form>
             </div>
-            <div class="col col-lg-7">
-                <div>
-                    <h5>Enter Values</h5>
-                    <form class="row gy-2 gx-3">
+            <div class="col-8 border bg-light">
+                <div class="row justify-content-center">
+                    <div class="col-12 text-center">
+                        <h1>Your Monthly Payment</h1>
+                    </div>
+                    <div class="col-12 text-center">
+                        <h2>$471.82</h2>
+                    </div>
+                    <div class="row justify-content-between row-cols-2 gy-3">
                         <div class="col">
-                            <input id="startValue" type="number" class="form-control" placeholder="Starting Value" value="0" aria-label="Start Value">
+                            Total Principal
+                        </div>
+                        <div class="col text-end">
+                            $25,000.00
                         </div>
                         <div class="col">
-                            <input id="endValue" type="number" class="form-control" placeholder="End Value" value="100" aria-label="End Value">
+                            Total Interest
                         </div>
-                        <div class="col-12 justify-content-end d-flex">
-                            <button type="button" id="btnSubmit"class="btn btn-large btn-dark">Calculate</button>
+                        <div class="col text-end">
+                            $3,306.85
                         </div>
-                    </form>
-                    <h2 class="mt-5 border-bottom border-2">Results</h2>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-sm">
-                            <tbody id="results">
-                                <!-- results go here -->
-                            </tbody>
-                        </table>
+                        <div class="col">
+                            Total Cost
+                        </div>
+                        <div class="col text-end">
+                            $28,306.85
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="mt-3">
+            <table class="table table-striped table-sm table-responsive">
+                <thead>
+                    <tr>
+                        <th scope="col">Month</th>
+                        <th scope="col">Payment</th>
+                        <th scope="col">Principal</th>
+                        <th scope="col">Interest</th>
+                        <th scope="col">Total Interest</th>
+                        <th scope="col">Balance</th>
+                    </tr>
+                </thead>
+                <tbody id="tableResults">
 
-    </div>
+                </tbody>
+            </table>
+        </div>
+    </div>       
 </main>
 <!-- footer section -->
     <footer class="footer mt-auto py-3">
@@ -108,6 +147,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
+    <script src="/JS/site.js"></script>
     <script>
         document.getElementById("btnSubmit").addEventListener("click", getValues);
     </script>
