--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100" onload="getValues()">
 <!-- nav section -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
@@ -79,26 +79,27 @@
                         <h1>Your Monthly Payment</h1>
                     </div>
                     <div class="col-12 text-center">
-                        <h2>$471.82</h2>
+                        <h2><div id="monthlyPayment">471.78</div></h2>
                     </div>
                     <div class="row justify-content-between row-cols-2 gy-3">
                         <div class="col">
                             Total Principal
                         </div>
                         <div class="col text-end">
-                            $25,000.00
+                            <div id="totalPrincipal">$25,000.00</div>
+                            
                         </div>
                         <div class="col">
                             Total Interest
                         </div>
                         <div class="col text-end">
-                            $3,306.85
+                            <div id="totalInterest">3306.85</div>
                         </div>
                         <div class="col">
                             Total Cost
                         </div>
                         <div class="col text-end">
-                            $28,306.85
+                            <div id="totalCost">$28,306.85</div>
                         </div>
                     </div>
                 </div>
